--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://muralidharabhat.me",
+  "homepage": "https://muralidharabhat.me/calculator-app",
   "dependencies": {
     "@react-buddy/ide-toolbox": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,12 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
